# srtcli

./: .gitignore  Cargo.toml  LICENSE  README.markdown
src/: main.rs  subtitle.rs
