[package]
name = "srtcli"
description = "Utility to playback subtitles on the command line."
version = "1.0.0"
authors = ["Sam Saint-Pettersen <s.stpettersen+github@gmail.com>"]
repository = "https://github.com/stpettersens/srtcli"
homepage = "https://github.com/stpettersens/srtcli"
license = "MIT"

[dependencies]
stopwatch = "0.0.6"
rust-clock = "0.1.0"
clioptions = "0.1.0"
regex = "0.1.77"
